Archive2/88/194e835d1ddd54/output
main.cpp: In function ‘int main()’:
main.cpp:23:34: error: expected primary-expression before ‘<<’ token
     std::cout << TYPE(std::cout) << std::endl;
                                  ^
